added s3 2nd class

--- a/AWSPractice/s3-2.md
+++ b/AWSPractice/s3-2.md
@@ -9,7 +9,7 @@
 ## Use S3 bucket for policy to: 
 * Grant public access to the bucket
 * Force objects to be encrypted at upload
-* Grant access to another account (Croos account)
+* Grant access to another account (Cross account)
 
 ```json
 {
