added s3 2nd class

--- a/AWSPractice/s3-2.md
+++ b/AWSPractice/s3-2.md
@@ -28,3 +28,30 @@
 ![./AWSPractice](./Images/s3-1.png)
 ![./AWSPractice](./Images/s3-2.png)
 
+# Bucket settings for Block Public Access
+![./AWSPractice](./Images/s3-3.png)
+* These settings were created to prevent company data leaks
+* If you know your bucket should never be public, leave these on
+* Can be set at the account level
+
+# Amazon S3 - Static Website Hosting
+![./AWSPractice](./Images/s3-4.png)
+* S3 can host static websites and have them accessible on the internet
+* The website URL will be depending on the region
+* http://bucket-name.s3-website-aws-region.amazonaws.com
+* If you get a 403 forbidden error, make sure the name of the bucket policy allows public reads!(make your bucket public)
+
+* Two things to do
+1. make your bucket public
+2. Enable static web hosting
+
+# Amazon S3 Versioning
+* You can version your files in Amazon s3
+* It is enabled at the bucket level
+* Same key overwrite will change the "version": 1,2,3...
+* It is best practice to version your buckets
+    * Protect against unintended deletes (ability to restore a version)
+    * Easy rollback to previous version
+* Notes:
+    * Any file that is not versioned prior to enabling versioning will have version "null"
+    * Suspending versioning does not delete the previous versions.
