--- a/AWSPractice/s3-2.md
+++ b/AWSPractice/s3-2.md
@@ -55,3 +55,26 @@
 * Notes:
     * Any file that is not versioned prior to enabling versioning will have version "null"
     * Suspending versioning does not delete the previous versions.
+
+# Amazon S3 - Replication (CRR & SRR)
+* Must enable versioning in source and destination buckets
+* Cross-Region Replication(CRR)
+* Same-Region Replication (SRR)
+* Buckets can be in different AWS accounts
+* Copying is asynchronous
+* Must give proper IAM Permissions to S3
+* Use Cases:
+    * CRR - compliance, lower latency access, replication accross accounts
+    * SRR - log aggregation, live replication between production and test accounts
+    ![./AWSPractice](./Images/s3-5.png)
+* Some other important points
+* After you enable Replication, only new objects are replicated.
+* Optionally, you can replicate existing objects using S3 Batch replication 
+* Replicates existing objects and objects that failed replication
+* For DELETE Operations
+* Can replicate delete markers from source to target(optional setting)
+* Deletions with a version ID are not replicated(to avoid malicious deletes)
+* There is no `chaining` of replication
+* If bucket 1 has replication into bucket 2, which has replication into bucket 3 then objects created in bucket 1 are not replicated into bucket 3.
+
+# Storage Classes
