--- a/AWSPractice/s3-2.md
+++ b/AWSPractice/s3-2.md
@@ -4,7 +4,7 @@
 * Resources: buckets and objects 
 * Effect: Allow/Deny
 * Actions: Set of API to allow or deny
-* Principal: The account or policy to apply the policy to
+* Principal: The account or user to apply the policy to
 
 ## Use S3 bucket for policy to: 
 * Grant public access to the bucket
@@ -13,14 +13,14 @@
 
 ```json
 {
-    "Version": "2012-10-17"
+    "Version": "2012-10-17",
     "Statement": [
         {
             "Sid" : "PublicRead",
             "Effect" : "Allow",
             "Principal" : "*",
             "Action" : ["s3:GetObject"],
-            "Resource" : ["arn:aws:s3:::examplebucket/*"]
+            "Resource" : ["arn:aws:s3:::demo-s3-bucket38476432/*"]
         }
     ]
 }
